force-app/main/default/objects/Partner_Commission_A__mdt/Partner_Commission_A__mdt.object-meta.xml
<CustomObject>
    <label>Partner Commission A</label>
    <pluralLabel>Partner Commission A</pluralLabel>
</CustomObject>