force-app/main/default/objects/Partner_Commission_A__mdt/fields/Category_Type__c.field-meta.xml
<CustomField>
    <fullName>Category_Type__c</fullName>
    <label>Category Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Colocation</fullName>
                <default>true</default>
                <label>Colocation</label>
            </value>
            <value>
                <fullName>Colocation One Time Fit Out Services(Cage, Rack Cost, CCTV)</fullName>
            </value>
            <value>
                <fullName>Bandwidth</fullName>
            </value>
            <value>
                <fullName>Equipment One time Sale</fullName>
            </value>
            <value>
                <fullName>Dedicated Hosting on OPEX(Hardware as a Service)</fullName>
            </value>
            <value>
                <fullName>IT Managed Services</fullName>
            </value>
            <value>
                <fullName>Yotta Cloud Services(Including Compute/Backup/ Storage)</fullName>
            </value>
            <value>
                <fullName>3rd Party Cloud Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>