force-app/main/default/objects/Partner_Commission_A__mdt/fields/Model_Type__c.field-meta.xml
<CustomField>
    <fullName>Model_Type__c</fullName>
    <label>Model Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Model A</fullName>
                <default>true</default>
                <label>Model A</label>
            </value>
            <value>
                <fullName>Model B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>