force-app/main/default/objects/Partner_Commission_A__mdt/fields/One_Time_Commission_on_Annual_Contract__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Commission_on_Annual_Contract__c</fullName>
    <label>One Time Commission % on Annual Contract</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>