force-app/main/default/objects/Partner_Commission_A__mdt/fields/Recurring_Commission_on_Actual_Billed__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Commission_on_Actual_Billed__c</fullName>
    <label>Recurring Commission % on Actual Billed</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>