force-app/main/default/objects/Partner_Commission_A__mdt/fields/Service_Type_Categories__c.field-meta.xml
<CustomField>
    <fullName>Service_Type_Categories__c</fullName>
    <label>Service Type Categories</label>
    <length>255</length>
    <type>Text</type>
</CustomField>